made: regenerate hash for link in create method
