# internal/entity/link.go
@@ -12,7 +12,9 @@ type Link struct {
 }
 
 func NewLink(url string) *Link {
-	return &Link{Url: url, Hash: RandStringRunes(10)}
+	link := &Link{Url: url}
+	link.GenerateHash()
+	return link
 }
 
 var letterRunes = []rune("abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ")
@@ -23,4 +25,8 @@ func RandStringRunes(n int) string {
 		b[i] = letterRunes[rand.Intn(len(letterRunes))]
 	}
 	return string(b)
+}
+
+func (l *Link) GenerateHash() {
+	l.Hash = RandStringRunes(6)
 }
